--- a/web.config
+++ b/web.config
@@ -5,7 +5,7 @@
             <remove fileExtension=".nip" />
             <mimeMap fileExtension=".nip" mimeType="application/octet-stream" />
             <remove fileExtension=".json" />
-            <mimeMap fileExtension=".json" mimeType="application/json" />
+            <mimeMap fileExtension=".json" mimeType="application/json; charset=UTF-8" />
         </staticContent>
     </system.webServer>
 </configuration>
